--- a/frontend/app/view/candidate/list.html
+++ b/frontend/app/view/candidate/list.html
@@ -4,13 +4,13 @@
 
         <md-content>
             <md-list flex>
-                <md-list-item class="md-3-line" ng-repeat="item in candidates" ng-click="null">
+                <md-list-item class="md-3-line" ng-repeat="item in candidates" ng-click="toEdit(item._id)">
 
                     <i class="fas fa-user-circle fa-3x" style="color: #9e9e9e; padding-right: 16px"></i>
 
                     <div class="md-list-item-text" layout="column">
                         <h3>{{ item.nome }}</h3>
-                        <h4>Idadel: {{ item.idade }}</h4>
+                        <h4>Idade: {{ item.idade }}</h4>
                         <p>Telefone: {{ item.telefone }}</p>
                     </div>
 
@@ -19,7 +19,7 @@
         </md-content>
     </div>
 
-    <md-button aria-label="menu" class="md-fab md-primary md-fab-bottom-right">
+    <md-button aria-label="menu" class="md-fab md-primary md-fab-bottom-right" ng-click="toEdit('new')">
         <i class="fas fa-plus fa-1x" style="color: white"></i>
     </md-button>
 
